2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Another typo.

        * platform/gtk/Skipped:

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Fix typo in test names.

        * platform/gtk/Skipped:

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Skip a few tests with links to their tracking bugs.

        * platform/gtk/Skipped:

2009-10-26  Daniel Bates  <dbates@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30491

        Test that the <isindex> element can be submitted without being enclosed
        within a <form> element. Also tests that the href property of the <base>
        element can be used to direct where the submission is sent.

        * http/tests/misc/isindex-with-no-form-base-href-expected.txt: Added.
        * http/tests/misc/isindex-with-no-form-base-href.html: Added.
        * http/tests/misc/isindex-with-no-form-expected.txt: Added.
        * http/tests/misc/isindex-with-no-form.html: Added.
        * http/tests/misc/resources/isindex-with-no-form-base-href-submit.html: Added.
        * http/tests/misc/resources/isindex-with-no-form-base-href.html: Added.

2009-10-26  Brian Weinstein  <bweinstein@apple.com>

        Unreviewed - Updating getComputedStyle results for Windows.

        Updating getComputedStyle results for Windows.

        * platform/win/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:

2009-10-26  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/7289467> and http://webkit.org/b/30798 - REGRESSION (r48687): www.myuhc.com doesn't load.

        * fast/loader/grandparent-completion-starts-redirect-expected.txt: Added.
        * fast/loader/grandparent-completion-starts-redirect.html: Added.
        * fast/loader/resources/meta-redirect-to-notify-done.html: Added.
        * fast/loader/resources/parent-of-redirect.html: Added.