@@ -637,10 +637,6 @@ media/video-controls-zoomed.html
 # Mixed content tests failing on Windows <http://webkit.org/b/29213>
 http/tests/security/mixedContent
 
-# As long as pages with unload handlers are put in the Page Cache, this test doesn't make any sense for Windows.
-# <rdar://problem/7196485> and https://bugs.webkit.org/show_bug.cgi?id=29021
-fast/loader/frames-with-unload-handlers-in-page-cache.html
-
 # <https://bugs.webkit.org/show_bug.cgi?id=29057>
 editing/pasteboard/files-during-page-drags.html
 
