@@ -1,3 +1,14 @@
+2009-10-27  Brady Eidson  <beidson@apple.com>
+
+        Rubberstamped by Sam Weinig.
+
+        Re-enable the check that disallows pages with unload handlers in the page cache.
+
+        <rdar://problem/7196485> and http://webkit.org/b/29021 
+
+        * platform/mac/Skipped:
+        * platform/win/Skipped:
+
 2009-10-27  Xan Lopez  <xlopez@igalia.com>
 
         Another typo.
